platform/workloads/apps/demo-app-switcharoo/rendered/manifests.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    k8s.score.dev/resource-guid: 6263d0b4-3a36-4639-e5b4-f4dd66bd05c7
    k8s.score.dev/resource-uid: postgres.default#hello-world.db
    k8s.score.dev/source-workload: hello-world
  labels:
    app.kubernetes.io/instance: pg-hello-world-6263d0b4
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: pg-hello-world-6263d0b4
  name: pg-hello-world-6263d0b4
  namespace: demo-app-switcharoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pg-hello-world-6263d0b4
  serviceName: pg-hello-world-6263d0b4
  template:
    metadata:
      annotations:
        k8s.score.dev/resource-guid: 6263d0b4-3a36-4639-e5b4-f4dd66bd05c7
        k8s.score.dev/resource-uid: postgres.default#hello-world.db
        k8s.score.dev/source-workload: hello-world
      labels:
        app.kubernetes.io/instance: pg-hello-world-6263d0b4
        app.kubernetes.io/managed-by: score-k8s
        app.kubernetes.io/name: pg-hello-world-6263d0b4
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_USER
              value: user-WcHOEJdj
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pg-hello-world-6263d0b4
            - name: POSTGRES_DB
              value: db-zKzPagbX
          image: mirror.gcr.io/postgres:17-alpine
          name: postgres-db
          ports:
            - containerPort: 5432
              name: postgres
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - user-WcHOEJdj
                - -d
                - db-zKzPagbX
            periodSeconds: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsGroup: 1000
            runAsUser: 1000
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pv-data
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
  volumeClaimTemplates:
    - metadata:
        annotations:
          k8s.score.dev/resource-guid: 6263d0b4-3a36-4639-e5b4-f4dd66bd05c7
          k8s.score.dev/resource-uid: postgres.default#hello-world.db
          k8s.score.dev/source-workload: hello-world
        labels:
          app.kubernetes.io/instance: pg-hello-world-6263d0b4
          app.kubernetes.io/managed-by: score-k8s
          app.kubernetes.io/name: pg-hello-world-6263d0b4
        name: pv-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    k8s.score.dev/resource-guid: 6263d0b4-3a36-4639-e5b4-f4dd66bd05c7
    k8s.score.dev/resource-uid: postgres.default#hello-world.db
    k8s.score.dev/source-workload: hello-world
  labels:
    app.kubernetes.io/instance: pg-hello-world-6263d0b4
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: pg-hello-world-6263d0b4
  name: pg-hello-world-6263d0b4
  namespace: demo-app-switcharoo
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/instance: pg-hello-world-6263d0b4
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "30"
    k8s.score.dev/resource-guid: af8d383e-7a27-4c77-9257-78e447d463bf
    k8s.score.dev/resource-uid: route.default#hello-world.route
    k8s.score.dev/source-workload: hello-world
  labels:
    app.kubernetes.io/instance: route-hello-world-af8d383e
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: route-hello-world-af8d383e
  name: route-hello-world-af8d383e
  namespace: demo-app-switcharoo
spec:
  hostnames:
    - demo2.oss.baby
  parentRefs:
    - name: default
  rules:
    - backendRefs:
        - name: hello-world
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    k8s.score.dev/workload-name: hello-world
  labels:
    app.kubernetes.io/instance: hello-world-83fb804a1c
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: hello-world
  name: hello-world
  namespace: demo-app-switcharoo
spec:
  ports:
    - name: www
      port: 8080
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: hello-world-83fb804a1c
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8s.score.dev/workload-name: hello-world
  labels:
    app.kubernetes.io/instance: hello-world-83fb804a1c
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: hello-world
  name: hello-world
  namespace: demo-app-switcharoo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: hello-world-83fb804a1c
  strategy: {}
  template:
    metadata:
      annotations:
        k8s.score.dev/workload-name: hello-world
        tags: nodejs,http,website,javascript,postgres
      labels:
        app.kubernetes.io/instance: hello-world-83fb804a1c
        app.kubernetes.io/managed-by: score-k8s
        app.kubernetes.io/name: hello-world
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              value: db-zKzPagbX
            - name: DB_HOST
              value: pg-hello-world-6263d0b4
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pg-hello-world-6263d0b4
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: user-WcHOEJdj
            - name: MESSAGE
              value: Hello, World!
            - name: PORT
              value: "3000"
          image: julsemaan/oss-baby:latest
          name: hello-world
          resources: {}
status: {}
